fixes bug on firefox

--- a/Assignments/Assignment9/style.css
+++ b/Assignments/Assignment9/style.css
@@ -29,14 +29,13 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-
 }
 
 .carousel__wrapper img {
-    width: 100%;
-    height: 100%;
-    /*width: 600px;*/
-    /*height: 400px;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    width: 600px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -102,12 +101,19 @@ body {
         display: block;
     }
 
+    .carousel {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+    }
+
     .carousel__wrapper {
         width: 100%;
     }
 
     .carousel__wrapper img {
         width: 100%;
+        height: auto;
         object-fit: cover;
     }
 }
